[gd_scene load_steps=19 format=3 uid="uid://boj7nc2xo44yc"]

[ext_resource type="Script" path="res://scenes/session/ui/userInterface.gd" id="1_8ewwt"]
[ext_resource type="Script" path="res://scenes/session/ui/header.gd" id="1_bahjh"]
[ext_resource type="Texture2D" uid="uid://c26gp0vfble8j" path="res://media/icons/save.svg" id="1_pbend"]
[ext_resource type="Texture2D" uid="uid://bggigofwbjy71" path="res://media/icons/openExternal.svg" id="2_l20dn"]
[ext_resource type="Texture2D" uid="uid://curefchw1l8ik" path="res://media/icons/playersView.svg" id="3_uuv8b"]
[ext_resource type="Texture2D" uid="uid://dwh0gw2hri0km" path="res://media/icons/home.svg" id="4_engue"]
[ext_resource type="Texture2D" uid="uid://dt3bspbajascj" path="res://media/icons/quit.svg" id="5_iwocy"]
[ext_resource type="Texture2D" uid="uid://dubafvvy7yto1" path="res://media/icons/playersViewHidden.svg" id="7_g458x"]
[ext_resource type="Script" path="res://scenes/session/ui/dock.gd" id="8_86g1f"]
[ext_resource type="Script" path="res://scenes/session/ui/outliner.gd" id="9_b6lcv"]
[ext_resource type="Texture2D" uid="uid://bavjf01rqqt5u" path="res://media/icons/reload.svg" id="14_cpqr0"]
[ext_resource type="Script" path="res://scenes/session/ui/displaySelector.gd" id="16_g6h7x"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kj21b"]
bg_color = Color(0.0901961, 0.0901961, 0.0901961, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gihsy"]
bg_color = Color(0.0901961, 0.0901961, 0.0901961, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5vdhu"]
bg_color = Color(0.12549, 0.12549, 0.12549, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.188235, 0.188235, 0.188235, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l7ksk"]
bg_color = Color(0.0901961, 0.0901961, 0.0901961, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eouog"]
content_margin_left = 5.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 5.0
bg_color = Color(0.12549, 0.12549, 0.12549, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.188235, 0.188235, 0.188235, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rqmpm"]
content_margin_left = 5.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 5.0
bg_color = Color(0.12549, 0.12549, 0.12549, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.188235, 0.188235, 0.188235, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="userInterface" type="CanvasLayer"]
script = ExtResource("1_8ewwt")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
visibility_layer = 1024
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/separation = 0

[node name="header" type="Panel" parent="VBoxContainer"]
unique_name_in_owner = true
visibility_layer = 1024
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_kj21b")
script = ExtResource("1_bahjh")

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/header"]
clip_children = 2
visibility_layer = 1024
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/header/MarginContainer"]
visibility_layer = 1024
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/header/MarginContainer/HBoxContainer"]
visibility_layer = 1024
layout_mode = 2
size_flags_horizontal = 3

[node name="session" type="MenuButton" parent="VBoxContainer/header/MarginContainer/HBoxContainer/HBoxContainer"]
unique_name_in_owner = true
visibility_layer = 1024
layout_mode = 2
mouse_default_cursor_shape = 2
text = "Session"
switch_on_hover = true
item_count = 6
popup/item_0/text = "Save session"
popup/item_0/icon = ExtResource("1_pbend")
popup/item_1/text = "Show session files"
popup/item_1/icon = ExtResource("2_l20dn")
popup/item_1/id = 1
popup/item_2/text = "Player's view"
popup/item_2/icon = ExtResource("3_uuv8b")
popup/item_2/id = 2
popup/item_3/text = "Player's view visibility"
popup/item_3/icon = ExtResource("7_g458x")
popup/item_3/id = 3
popup/item_4/text = "Return to main"
popup/item_4/icon = ExtResource("4_engue")
popup/item_4/id = 4
popup/item_5/text = "Quit session"
popup/item_5/icon = ExtResource("5_iwocy")
popup/item_5/id = 5

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/header/MarginContainer/HBoxContainer"]
visibility_layer = 1024
layout_mode = 2
size_flags_horizontal = 6

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer/header/MarginContainer/HBoxContainer"]
visibility_layer = 1024
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
visibility_layer = 1024
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
theme_override_constants/separation = 0

[node name="viewport" type="Control" parent="VBoxContainer/HBoxContainer"]
visibility_layer = 1024
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="outliner" type="Panel" parent="VBoxContainer/HBoxContainer"]
visibility_layer = 1024
custom_minimum_size = Vector2(256, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_gihsy")
script = ExtResource("9_b6lcv")

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer/outliner"]
visibility_layer = 1024
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10

[node name="panel" type="Panel" parent="VBoxContainer/HBoxContainer/outliner/MarginContainer"]
visibility_layer = 1024
clip_contents = true
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_5vdhu")

[node name="outlinerContainer" type="ScrollContainer" parent="VBoxContainer/HBoxContainer/outliner/MarginContainer/panel"]
unique_name_in_owner = true
visibility_layer = 1024
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
mouse_force_pass_scroll_events = false
horizontal_scroll_mode = 0

[node name="outlinerTree" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/outliner/MarginContainer/panel/outlinerContainer"]
unique_name_in_owner = true
visibility_layer = 1024
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 3

[node name="dock" type="Panel" parent="VBoxContainer"]
unique_name_in_owner = true
visibility_layer = 1024
custom_minimum_size = Vector2(0, 196)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_l7ksk")
script = ExtResource("8_86g1f")

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/dock"]
visibility_layer = 1024
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/dock/MarginContainer"]
visibility_layer = 1024
layout_mode = 2
theme_override_constants/separation = 10

[node name="sessionTree" type="Tree" parent="VBoxContainer/dock/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
visibility_layer = 1024
custom_minimum_size = Vector2(256, 0)
layout_mode = 2
mouse_force_pass_scroll_events = false
theme_override_styles/panel = SubResource("StyleBoxFlat_eouog")

[node name="reloadButton" type="Button" parent="VBoxContainer/dock/MarginContainer/HBoxContainer/sessionTree"]
unique_name_in_owner = true
visibility_layer = 1024
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -32.0
offset_bottom = 32.0
grow_horizontal = 0
mouse_default_cursor_shape = 2
icon = ExtResource("14_cpqr0")
flat = true

[node name="assetContainer" type="ScrollContainer" parent="VBoxContainer/dock/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
visibility_layer = 1024
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 0
mouse_force_pass_scroll_events = false
theme_override_styles/panel = SubResource("StyleBoxFlat_rqmpm")
horizontal_scroll_mode = 0

[node name="assetGrid" type="GridContainer" parent="VBoxContainer/dock/MarginContainer/HBoxContainer/assetContainer"]
unique_name_in_owner = true
visibility_layer = 1024
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 5
theme_override_constants/v_separation = 0
columns = 9

[node name="fileDialog" type="FileDialog" parent="VBoxContainer/dock"]
unique_name_in_owner = true
title = "Open File(s)"
initial_position = 4
ok_button_text = "Open"
dialog_hide_on_ok = true
file_mode = 1
access = 2
filters = PackedStringArray(".png, .jpg, .jpeg, .webp")
use_native_dialog = true

[node name="playersViewPopup" type="ConfirmationDialog" parent="."]
unique_name_in_owner = true
initial_position = 2
size = Vector2i(450, 300)

[node name="MarginContainer" type="MarginContainer" parent="playersViewPopup"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = -48.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="playersViewPopup/MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="playersViewPopup/MarginContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="displaySelector" type="Panel" parent="playersViewPopup/MarginContainer/Panel/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
script = ExtResource("16_g6h7x")

[connection signal="item_selected" from="VBoxContainer/dock/MarginContainer/HBoxContainer/sessionTree" to="VBoxContainer/dock" method="_on_sessionTree_item_selected"]
[connection signal="pressed" from="VBoxContainer/dock/MarginContainer/HBoxContainer/sessionTree/reloadButton" to="VBoxContainer/dock" method="updateTree"]
[connection signal="resized" from="VBoxContainer/dock/MarginContainer/HBoxContainer/assetContainer" to="VBoxContainer/dock" method="_on_assetContainer_resized"]
[connection signal="files_selected" from="VBoxContainer/dock/fileDialog" to="VBoxContainer/dock" method="uploadFiles"]
[connection signal="confirmed" from="playersViewPopup" to="." method="_on_playersViewPopup_confirmed"]
[connection signal="item_rect_changed" from="playersViewPopup/MarginContainer/Panel/MarginContainer/displaySelector" to="playersViewPopup/MarginContainer/Panel/MarginContainer/displaySelector" method="update"]
